--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,49 +1,8 @@
-annotated-types==0.7.0
-anyio==4.10.0
-cachetools==6.2.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
-faiss-cpu==1.12.0
 fastapi==0.117.1
-greenlet==3.2.4
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-ibm-cos-sdk==2.14.3
-ibm-cos-sdk-core==2.14.3
-ibm-cos-sdk-s3transfer==2.14.3
-ibm_watsonx_ai==1.3.38
-idna==3.10
-jmespath==1.0.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.27
-langchain-core==0.3.76
-langchain-text-splitters==0.3.11
-langsmith==0.4.29
-lomond==0.3.3
-numpy==2.3.3
-orjson==3.11.3
-packaging==25.0
-pandas==2.2.3
-pydantic==2.11.9
-pydantic_core==2.33.2
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.2
-requests==2.32.5
-requests-toolbelt==1.0.0
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.43
-starlette==0.48.0
-tabulate==0.9.0
-tenacity==9.1.2
-typing-inspection==0.4.1
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
 uvicorn==0.36.0
-zstandard==0.25.0
+pydantic==2.11.9
+ibm-watson==6.1.0
+ibm-cloud-sdk-core==3.20.0
+python-multipart==0.0.6  # if you ever handle file uploads
+requests==2.32.5
+orjson==3.11.3            # optional, for fast JSON handling
